<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phlo.trabalho_3.Menu"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/CadastrarTarefa"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/cadastrar_tarefa"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/listarTarefa"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="103dp"
        app:layout_constraintLeft_toLeftOf="@+id/listarTarefa" />

    <Button
        android:id="@+id/listarTarefa"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:text="@string/listar_tarefa"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/CadastrarTarefa"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="23dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/CadastrarEtiqueta"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:text="@string/cadastrar_etiqueta"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/listarTarefa"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="35dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/listarEtiqueta"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:text="@string/listar_etiqueta"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/CadastrarEtiqueta"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="19dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
